@@ -1,3 +1,10 @@
+2008-04-11  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/renderer/xy/DeviationRenderer.java
+    (findRangeBounds): New method override,
+    * source/org/jfree/chart/renderer/xy/YIntervalRenderer.java
+    (findRangeBounds): Likewise.
+
 2008-04-10  David Gilbert  <david.gilbert@object-refinery.com> 
 
     * source/org/jfree/data/xy/XIntervalSeriesCollection.java
